.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__XCD_Control_Panel__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for a range of functions including joiner, leave, overtime, recruitment, expenses, documents, salary award and publish payslip message</description>
    <fields>
        <fullName>xcdhcm__Batch_size__c</fullName>
        <label>Batch size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Keywords_to_exclude__c</fullName>
        <description>Profiles, permission sets and public groups with these Keywords will not be included in new joiner, edit JR and change JR process.</description>
        <label>Keywords to exclude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Keywords_to_include__c</fullName>
        <description>Profiles with these Keywords will be included in new joiner, edit JR and change JR process.</description>
        <label>Keywords to include</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leave_category__c</fullName>
        <label>Leave category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is Active it will share the records with the manager and hierarchy user with this profile</description>
        <label>Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Mileage_expense_rate__c</fullName>
        <label>Mileage expense rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__New_joiner_add_info_page_sections__c</fullName>
        <description>Stores profiles active for assigning profiles, permission sets and public groups on joiner page, edit and change job role page.</description>
        <label>New_joiner_add_info_page_sections</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__No_of_license_available__c</fullName>
        <description>This field will store total number of &apos;Salesforce Platform&apos; or &apos;Salesforce CRM Content User&apos; license available.</description>
        <label>No of license available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Search_Type__c</fullName>
        <description>User to controller vacancy search type patten in site and internal page</description>
        <inlineHelpText>Give the search type AND / OR</inlineHelpText>
        <label>Search_Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Team_Leader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is Active it will share the records with the manager and hierarchy user with this profile</description>
        <label>Team Leader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__isEmailActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isEmailActive</label>
        <type>Checkbox</type>
    </fields>
    <label>XCD Control Panel</label>
</CustomObject>